Update src/test/java/org/ssoggy/ssoggysouls/util/TabCompleteUtilTest.java
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>